2007-12-08  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/verilog-mode.el (verilog-mode-version)
	(verilog-mode-release-date): Don't use expanding keywords.
	(provide): Move to the end of file.
	(fboundp): Don't check if eval-when-compile is bound, it is used
	later in the file without checking.
	(when, unless): Copy definitions from subr.el.
	(char-before, defcustom, defface, customize-group)
	(verilog-batch-error-wrapper): Don't use old style backquotes.
	(verilog-regexp-opt): Avoid using the cl function case.
	(verilog-regexp-words): Remove duplicated definition.
	(verilog-mode-abbrev-table): Remove, duplicate.
	(verilog-mode-map, verilog-template-map, verilog-mode-mouse-map):
	Declare and initialize in one step.
	(verilog-declaration-prefix-re, verilog-declaration-re)
	(verilog-end-of-statement, verilog-indent-declaration)
	(verilog-get-lineup-indent): Remove trailing whitespace.
	(verilog-mode): Fix autoload cookie. Set
	beginning-of-defun-function and end-of-defun-function. Use when
	instead of if.
	(verilog-emacs-features, verilog-auto-ascii-enum)
	(verilog-insert-indices): Escape braces in doc strings.

2007-12-08  Michael McNamara <mac@verilog.com>
	    Wilson Snyder <wsnyder@wsnyder.org>

	* progmodes/verilog-mode.el: New file.

2007-12-08  Eli Zaretskii  <eliz@fencepost.gnu.org>

	* international/latexenc.el (latexenc-find-file-coding-system): If
	both coding-system-for-write and buffer-file-coding-system of
	latex-main-file are nil, use `undecided'.

2007-12-06  Jason Rumney  <jasonr@gnu.org>

	* mouse.el (mouse-buffer-menu-alist): Keep buffer names left aligned.

2007-12-04  Juanma Barranquero  <lekktu@gmail.com>

	* ido.el (ido-save-history): Use emacs-mule coding system
	instead of utf-8 to save filenames (it's safer in Emacs 22).
	Set the `coding' local variable on the first line of the file.

2007-12-04  Karl Fogel  <kfogel@red-bean.com>

	* saveplace.el (save-place-alist-to-file): Save with 'emacs-mule'